k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i27-gateway
  labels:
    app: i27-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i27-gateway
  template:
    metadata:
      labels:
        app: i27-gateway
    spec:
      containers:
        - name: i27-gateway
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 256Mi
          #   limits:
          #     cpu: 500m
          #     memory: 512Mi
