k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i27-gateway
  labels:
    app: i27-gateway
spec:
  type: ClusterIP
  selector:
    app: i27-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: i27-gateway-nodeport
  labels:
    app: i27-gateway
spec:
  type: NodePort
  selector:
    app: i27-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
